# opendrive-gd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY.txt
addons/opendrive/: import_plugin.gd  import_plugin.gd.uid  opendrive-gd.gdextension  plugin.cfg  plugin.gd  plugin.gd.uid
src/: extension.cpp  gdx.h  open_drive_map.h  utils.h
